Bug 568782 add #ifdef SOLARIS for mmap/munmap changes r=igor